Images for overview added and in correct position
Messed up layout for the two points

--- a/homepage.css
+++ b/homepage.css
@@ -9,7 +9,7 @@
     font-size: 20px;
 }
 /* Overview content */
-.overview{
+/* .overview{
     display: grid;
     grid-template-columns: 1fr, 1fr;
     grid-gap: 1em;
@@ -22,6 +22,14 @@
 .overview-vid{
     grid-row: 1/2;
     grid-column: 3;
+    float: left;
+} */
+.o-img{
+    float: left;
+    width: 30%;
+    margin: 1.66%;
+    margin-bottom: 1px;
+    margin-top:1px;
 }
 .points{
     display: flex;
